--- a/React/petite-ecole/src/App.css
+++ b/React/petite-ecole/src/App.css
@@ -39,4 +39,13 @@
 
 .styleApp {
   height: 600px;
+  display: flex;
+  flex-direction: row;
+}
+
+.groupCollaps {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  margin: 40px 40px 0px 40px;
 }
