--- a/React/petite-ecole/src/Component/PopUp/PopUp.css
+++ b/React/petite-ecole/src/Component/PopUp/PopUp.css
@@ -12,6 +12,8 @@
     z-index: 1000; /* Assure que l'overlay est au-dessus du contenu */
 }
 
+
+
 .popupContent {
     background-color: white; 
     padding: 20px;
@@ -20,6 +22,41 @@
     width: 300px; 
 }
 
+
+.popUpHeader {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+
+.popupContentComponent {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+
+
+.popUpInputName {
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
+}
+
+
+.popUpButton {
+    display: flex;
+    flex-direction: row;
+    column-gap: 10px;
+    justify-content: right;
+}
 
 /* 1. Ce que fait top: 50% et left: 50% :
 top: 50% place le coin supérieur gauche de ton élément à 50% de la hauteur de la fenêtre.
