--- a/React/petite-ecole/src/App.css
+++ b/React/petite-ecole/src/App.css
@@ -41,6 +41,8 @@
   height: 600px;
   display: flex;
   flex-direction: row;
+  margin: 0;
+  padding: 0;
   width: 100%;
 }
 
@@ -49,6 +51,7 @@
   flex-direction: column;
   row-gap: 20px;
   margin: 40px 40px 0px 40px;
+  width: 100%;
 }
 
 .reactIcon {
