--- a/React/petite-ecole/src/Component/ClasseComponent/ClasseData/ClasseData.css
+++ b/React/petite-ecole/src/Component/ClasseComponent/ClasseData/ClasseData.css
@@ -5,6 +5,7 @@
     padding: 10px;
     border-top: 1px solid rgb(236, 236, 236);
     border-bottom: 1px solid rgb(236, 236, 236);
+    width: 100%;
 }
 
 .styleClassInfo {
